--- a/Biodata Adenovi FH.html
+++ b/Biodata Adenovi FH.html
@@ -10,6 +10,6 @@
         <ul><li>2016-2019 SMAN 1 Purworejo</li><li>2019-sekarang UGM</li></ul>
         <h3>Bisa cek di media sosial saya</h3>
         <p><a href="https://www.instagram.com/yoriovi_/" target="_blank">yoriovi_</a></p>
-        <p><b>Nice to meet you</b></p>
+        <p><b>Nice to meet you guys</b></p>
     </body>
 </html>        
