--- a/table.html
+++ b/table.html
@@ -13,7 +13,7 @@
     
     <form>
         <p>Nama</p>
-        <input type="text" name="nama">
+        <input type="text" name="nama" placeholder="enter your name">
         <p>Kelompok</p>
         <input type="radio" name="kelompok" id="Jogja">
         <label for="Jogja">Jogja</label>
