--- a/Biodata Adenovi FH.html
+++ b/Biodata Adenovi FH.html
@@ -1,15 +1,58 @@
-<html>
-    <body>
-        <H1><bold>Adenovi Fauzia Hanifah</bold></h1>
-        <img src="fotoadenovi.jpg" width="240" height="320" /></a></div><br />
-        <h2><b>Tentang Saya</b></h2>
-        <p style="text-align: justify;">Saya adalah seseorang yang tertarik dalam hal yang berkaitan dengan digital marketing dan copywriting</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Biodata</title>
+    <link rel="stylesheet" href="./style bio.css">
+    <style>
+        .nav ul {
+         list-style-type: none;
+         margin: 0;
+         padding: 0;
+         overflow: hidden;
+         background-color: #333;
+        }
+
+        .nav li {
+          float: left;
+        }
+
+        .nav li a {
+         display: block;
+         color: seashell;
+         text-align: center;
+         padding: 14px 16px;
+         text-decoration: none;
+        }
+    </style>
+</head>
+ <body>
+    <div class="nav">
+        <ul>
+            <li><a href="">Biodata</a></li>
+            <li><a href="Portofolio.html">Portofolio</a></li>
+        </ul>
+    </div>
+    <H1>Adenovi Fauzia Hanifah</h1>
+    <center>
+    <img src="fotoadenovi.jpg" width="240" height="320" /></a></div><br />
+    </center>
+    <h2><b>Tentang Saya</b></h2>
+        <p class="narasi">Saya adalah seseorang yang tertarik dalam hal yang berkaitan dengan digital marketing dan copywriting. 
+            Senang mempelajari hal baru dan tidak mudah untuk menyerah.</p>
         <h2><bold>Keahlian Saya</bold></h2>
-        <ol><li>Writing</li><li>Marketing</li></ol>
+        <ol>
+            <li>Writing</li>
+            <li>Marketing</li>
+        </ol>
         <h2><b>Riwayat Pendidikan</b></h2>
-        <ul><li>2016-2019 SMAN 1 Purworejo</li><li>2019-sekarang UGM</li></ul>
-        <h3>Bisa cek di media sosial saya</h3>
-        <p><a href="https://www.instagram.com/yoriovi_/" target="_blank">yoriovi_</a></p>
-        <p><b>Nice to meet you guys</b></p>
-    </body>
-</html>        
+        <ul>
+            <li>2016-2019 SMAN 1 Purworejo</li>
+            <li>2019-sekarang UGM</li>
+        </ul>
+        <h2>Kontak Personal</h2>
+        <p style="text-align: center;"><a href="https://www.instagram.com/yoriovi_/" target="_blank">yoriovi_</a></p>
+</body>
+</html>      
